jeu quasi fini reste plus que le gameover

--- a/02-Projet/CarDestruction/Assembly-CSharp.csproj
+++ b/02-Projet/CarDestruction/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Assets\Script\Car.cs" />
     <Compile Include="Assets\Script\Controller.cs" />
     <Compile Include="Assets\Script\DestructionCol.cs" />
+    <Compile Include="Assets\Script\Login.cs" />
     <Compile Include="Assets\Script\PlayerWalk.cs" />
     <Compile Include="Assets\Script\SmoothFollow.cs" />
     <Compile Include="Assets\Script\Wheels.cs" />
